--- a/src/eval_sockdef.ipynb
+++ b/src/eval_sockdef.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,16 +114,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "attack_res[(\"amazon\", \"rev2\", 400.0)].to_csv(\"ar.csv\")"
+    "# attack_res[(\"amazon\", \"rev2\", 400.0)].to_csv(\"ar.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -182,48 +182,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>sockfarm-fraudar</th>\n",
-       "      <td>0.121913</td>\n",
-       "      <td>0.110974</td>\n",
-       "      <td>0.101918</td>\n",
-       "      <td>0.094282</td>\n",
-       "      <td>0.225535</td>\n",
-       "      <td>0.189195</td>\n",
-       "      <td>0.163793</td>\n",
-       "      <td>0.144759</td>\n",
-       "      <td>0.195070</td>\n",
-       "      <td>0.183884</td>\n",
-       "      <td>0.174072</td>\n",
-       "      <td>0.165371</td>\n",
+       "      <td>0.394338</td>\n",
+       "      <td>0.315671</td>\n",
+       "      <td>0.264594</td>\n",
+       "      <td>0.227757</td>\n",
+       "      <td>0.062447</td>\n",
+       "      <td>0.041636</td>\n",
+       "      <td>0.031231</td>\n",
+       "      <td>0.024987</td>\n",
+       "      <td>0.489287</td>\n",
+       "      <td>0.339801</td>\n",
+       "      <td>0.286420</td>\n",
+       "      <td>0.247854</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sockfarm-rev2</th>\n",
-       "      <td>0.121913</td>\n",
-       "      <td>0.110974</td>\n",
-       "      <td>0.101918</td>\n",
-       "      <td>0.094282</td>\n",
-       "      <td>0.249070</td>\n",
-       "      <td>0.217751</td>\n",
-       "      <td>0.194319</td>\n",
-       "      <td>0.175882</td>\n",
-       "      <td>0.390499</td>\n",
-       "      <td>0.328610</td>\n",
-       "      <td>0.285226</td>\n",
-       "      <td>0.252690</td>\n",
+       "      <td>0.391247</td>\n",
+       "      <td>0.315671</td>\n",
+       "      <td>0.264594</td>\n",
+       "      <td>0.227757</td>\n",
+       "      <td>0.219717</td>\n",
+       "      <td>0.152019</td>\n",
+       "      <td>0.116221</td>\n",
+       "      <td>0.094073</td>\n",
+       "      <td>0.716412</td>\n",
+       "      <td>0.792877</td>\n",
+       "      <td>0.836853</td>\n",
+       "      <td>0.865422</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sockfarm-rsd</th>\n",
-       "      <td>0.121913</td>\n",
-       "      <td>0.110974</td>\n",
-       "      <td>0.101918</td>\n",
-       "      <td>0.094282</td>\n",
-       "      <td>0.233449</td>\n",
-       "      <td>0.204725</td>\n",
-       "      <td>0.183221</td>\n",
-       "      <td>0.166266</td>\n",
-       "      <td>0.256889</td>\n",
-       "      <td>0.236537</td>\n",
-       "      <td>0.219631</td>\n",
-       "      <td>0.205280</td>\n",
+       "      <td>0.391247</td>\n",
+       "      <td>0.315671</td>\n",
+       "      <td>0.264594</td>\n",
+       "      <td>0.227757</td>\n",
+       "      <td>0.194311</td>\n",
+       "      <td>0.133320</td>\n",
+       "      <td>0.101477</td>\n",
+       "      <td>0.081915</td>\n",
+       "      <td>0.489287</td>\n",
+       "      <td>0.339801</td>\n",
+       "      <td>0.286420</td>\n",
+       "      <td>0.247854</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -232,15 +232,15 @@
       "text/plain": [
        "                   fraudar                                     rsd            \\\n",
        "budget               100.0     200.0     300.0     400.0     100.0     200.0   \n",
-       "sockfarm-fraudar  0.121913  0.110974  0.101918  0.094282  0.225535  0.189195   \n",
-       "sockfarm-rev2     0.121913  0.110974  0.101918  0.094282  0.249070  0.217751   \n",
-       "sockfarm-rsd      0.121913  0.110974  0.101918  0.094282  0.233449  0.204725   \n",
+       "sockfarm-fraudar  0.394338  0.315671  0.264594  0.227757  0.062447  0.041636   \n",
+       "sockfarm-rev2     0.391247  0.315671  0.264594  0.227757  0.219717  0.152019   \n",
+       "sockfarm-rsd      0.391247  0.315671  0.264594  0.227757  0.194311  0.133320   \n",
        "\n",
        "                                          rev2                                \n",
        "budget               300.0     400.0     100.0     200.0     300.0     400.0  \n",
-       "sockfarm-fraudar  0.163793  0.144759  0.195070  0.183884  0.174072  0.165371  \n",
-       "sockfarm-rev2     0.194319  0.175882  0.390499  0.328610  0.285226  0.252690  \n",
-       "sockfarm-rsd      0.183221  0.166266  0.256889  0.236537  0.219631  0.205280  "
+       "sockfarm-fraudar  0.031231  0.024987  0.489287  0.339801  0.286420  0.247854  \n",
+       "sockfarm-rev2     0.116221  0.094073  0.716412  0.792877  0.836853  0.865422  \n",
+       "sockfarm-rsd      0.101477  0.081915  0.489287  0.339801  0.286420  0.247854  "
       ]
      },
      "metadata": {},
@@ -290,48 +290,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>sockfarm-fraudar</th>\n",
-       "      <td>0.214725</td>\n",
-       "      <td>0.159638</td>\n",
-       "      <td>0.127632</td>\n",
-       "      <td>0.106505</td>\n",
-       "      <td>0.194587</td>\n",
-       "      <td>0.148854</td>\n",
-       "      <td>0.120878</td>\n",
-       "      <td>0.101868</td>\n",
-       "      <td>0.581812</td>\n",
-       "      <td>0.436666</td>\n",
-       "      <td>0.350878</td>\n",
-       "      <td>0.293714</td>\n",
+       "      <td>0.425905</td>\n",
+       "      <td>0.278097</td>\n",
+       "      <td>0.207575</td>\n",
+       "      <td>0.165588</td>\n",
+       "      <td>0.032231</td>\n",
+       "      <td>0.021261</td>\n",
+       "      <td>0.015863</td>\n",
+       "      <td>0.012652</td>\n",
+       "      <td>0.597985</td>\n",
+       "      <td>0.310069</td>\n",
+       "      <td>0.231415</td>\n",
+       "      <td>0.184594</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sockfarm-rev2</th>\n",
-       "      <td>0.214725</td>\n",
-       "      <td>0.159638</td>\n",
-       "      <td>0.127632</td>\n",
-       "      <td>0.106505</td>\n",
-       "      <td>0.305383</td>\n",
-       "      <td>0.232319</td>\n",
-       "      <td>0.188068</td>\n",
-       "      <td>0.158172</td>\n",
-       "      <td>0.377987</td>\n",
-       "      <td>0.283725</td>\n",
-       "      <td>0.228024</td>\n",
-       "      <td>0.190905</td>\n",
+       "      <td>0.421247</td>\n",
+       "      <td>0.278097</td>\n",
+       "      <td>0.207575</td>\n",
+       "      <td>0.165588</td>\n",
+       "      <td>0.127371</td>\n",
+       "      <td>0.084005</td>\n",
+       "      <td>0.062673</td>\n",
+       "      <td>0.049982</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sockfarm-rsd</th>\n",
-       "      <td>0.214725</td>\n",
-       "      <td>0.159638</td>\n",
-       "      <td>0.127632</td>\n",
-       "      <td>0.106505</td>\n",
-       "      <td>0.299305</td>\n",
-       "      <td>0.227811</td>\n",
-       "      <td>0.184464</td>\n",
-       "      <td>0.155163</td>\n",
-       "      <td>0.562528</td>\n",
-       "      <td>0.422437</td>\n",
-       "      <td>0.339570</td>\n",
-       "      <td>0.284320</td>\n",
+       "      <td>0.421247</td>\n",
+       "      <td>0.278097</td>\n",
+       "      <td>0.207575</td>\n",
+       "      <td>0.165588</td>\n",
+       "      <td>0.109645</td>\n",
+       "      <td>0.072313</td>\n",
+       "      <td>0.053949</td>\n",
+       "      <td>0.043024</td>\n",
+       "      <td>0.597985</td>\n",
+       "      <td>0.310069</td>\n",
+       "      <td>0.231415</td>\n",
+       "      <td>0.184594</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -340,15 +340,15 @@
       "text/plain": [
        "                   fraudar                                     rsd            \\\n",
        "budget               100.0     200.0     300.0     400.0     100.0     200.0   \n",
-       "sockfarm-fraudar  0.214725  0.159638  0.127632  0.106505  0.194587  0.148854   \n",
-       "sockfarm-rev2     0.214725  0.159638  0.127632  0.106505  0.305383  0.232319   \n",
-       "sockfarm-rsd      0.214725  0.159638  0.127632  0.106505  0.299305  0.227811   \n",
+       "sockfarm-fraudar  0.425905  0.278097  0.207575  0.165588  0.032231  0.021261   \n",
+       "sockfarm-rev2     0.421247  0.278097  0.207575  0.165588  0.127371  0.084005   \n",
+       "sockfarm-rsd      0.421247  0.278097  0.207575  0.165588  0.109645  0.072313   \n",
        "\n",
        "                                          rev2                                \n",
        "budget               300.0     400.0     100.0     200.0     300.0     400.0  \n",
-       "sockfarm-fraudar  0.120878  0.101868  0.581812  0.436666  0.350878  0.293714  \n",
-       "sockfarm-rev2     0.188068  0.158172  0.377987  0.283725  0.228024  0.190905  \n",
-       "sockfarm-rsd      0.184464  0.155163  0.562528  0.422437  0.339570  0.284320  "
+       "sockfarm-fraudar  0.015863  0.012652  0.597985  0.310069  0.231415  0.184594  \n",
+       "sockfarm-rev2     0.062673  0.049982  1.000000  1.000000  1.000000  1.000000  \n",
+       "sockfarm-rsd      0.053949  0.043024  0.597985  0.310069  0.231415  0.184594  "
       ]
      },
      "metadata": {},
@@ -398,65 +398,65 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>sockfarm-fraudar</th>\n",
-       "      <td>0.085197</td>\n",
-       "      <td>0.085197</td>\n",
-       "      <td>0.085197</td>\n",
-       "      <td>0.085197</td>\n",
-       "      <td>0.298607</td>\n",
-       "      <td>0.298607</td>\n",
-       "      <td>0.298607</td>\n",
-       "      <td>0.298607</td>\n",
-       "      <td>0.117615</td>\n",
-       "      <td>0.117615</td>\n",
-       "      <td>0.117615</td>\n",
-       "      <td>0.117615</td>\n",
+       "      <td>0.367617</td>\n",
+       "      <td>0.365678</td>\n",
+       "      <td>0.365678</td>\n",
+       "      <td>0.365678</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0.420354</td>\n",
+       "      <td>0.376195</td>\n",
+       "      <td>0.376195</td>\n",
+       "      <td>0.377742</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sockfarm-rev2</th>\n",
-       "      <td>0.085197</td>\n",
-       "      <td>0.085197</td>\n",
-       "      <td>0.085197</td>\n",
-       "      <td>0.085197</td>\n",
-       "      <td>0.220897</td>\n",
-       "      <td>0.220897</td>\n",
-       "      <td>0.220897</td>\n",
-       "      <td>0.220897</td>\n",
-       "      <td>0.427713</td>\n",
-       "      <td>0.427713</td>\n",
-       "      <td>0.427713</td>\n",
-       "      <td>0.427713</td>\n",
+       "      <td>0.365678</td>\n",
+       "      <td>0.365678</td>\n",
+       "      <td>0.365678</td>\n",
+       "      <td>0.365678</td>\n",
+       "      <td>0.8163</td>\n",
+       "      <td>0.8163</td>\n",
+       "      <td>0.8163</td>\n",
+       "      <td>0.8163</td>\n",
+       "      <td>0.558191</td>\n",
+       "      <td>0.656888</td>\n",
+       "      <td>0.719521</td>\n",
+       "      <td>0.762810</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sockfarm-rsd</th>\n",
-       "      <td>0.085197</td>\n",
-       "      <td>0.085197</td>\n",
-       "      <td>0.085197</td>\n",
-       "      <td>0.085197</td>\n",
-       "      <td>0.203497</td>\n",
-       "      <td>0.203497</td>\n",
-       "      <td>0.203497</td>\n",
-       "      <td>0.203497</td>\n",
-       "      <td>0.168598</td>\n",
-       "      <td>0.168598</td>\n",
-       "      <td>0.168598</td>\n",
-       "      <td>0.168598</td>\n",
+       "      <td>0.365678</td>\n",
+       "      <td>0.365678</td>\n",
+       "      <td>0.365678</td>\n",
+       "      <td>0.365678</td>\n",
+       "      <td>0.8671</td>\n",
+       "      <td>0.8671</td>\n",
+       "      <td>0.8671</td>\n",
+       "      <td>0.8671</td>\n",
+       "      <td>0.420354</td>\n",
+       "      <td>0.376195</td>\n",
+       "      <td>0.376195</td>\n",
+       "      <td>0.377742</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   fraudar                                     rsd            \\\n",
-       "budget               100.0     200.0     300.0     400.0     100.0     200.0   \n",
-       "sockfarm-fraudar  0.085197  0.085197  0.085197  0.085197  0.298607  0.298607   \n",
-       "sockfarm-rev2     0.085197  0.085197  0.085197  0.085197  0.220897  0.220897   \n",
-       "sockfarm-rsd      0.085197  0.085197  0.085197  0.085197  0.203497  0.203497   \n",
+       "                   fraudar                                   rsd          \\\n",
+       "budget               100.0     200.0     300.0     400.0   100.0   200.0   \n",
+       "sockfarm-fraudar  0.367617  0.365678  0.365678  0.365678  1.0000  1.0000   \n",
+       "sockfarm-rev2     0.365678  0.365678  0.365678  0.365678  0.8163  0.8163   \n",
+       "sockfarm-rsd      0.365678  0.365678  0.365678  0.365678  0.8671  0.8671   \n",
        "\n",
-       "                                          rev2                                \n",
-       "budget               300.0     400.0     100.0     200.0     300.0     400.0  \n",
-       "sockfarm-fraudar  0.298607  0.298607  0.117615  0.117615  0.117615  0.117615  \n",
-       "sockfarm-rev2     0.220897  0.220897  0.427713  0.427713  0.427713  0.427713  \n",
-       "sockfarm-rsd      0.203497  0.203497  0.168598  0.168598  0.168598  0.168598  "
+       "                                      rev2                                \n",
+       "budget             300.0   400.0     100.0     200.0     300.0     400.0  \n",
+       "sockfarm-fraudar  1.0000  1.0000  0.420354  0.376195  0.376195  0.377742  \n",
+       "sockfarm-rev2     0.8163  0.8163  0.558191  0.656888  0.719521  0.762810  \n",
+       "sockfarm-rsd      0.8671  0.8671  0.420354  0.376195  0.376195  0.377742  "
       ]
      },
      "metadata": {},
@@ -465,9 +465,9 @@
    ],
    "source": [
     "def_dict = {\n",
-    "    \"fraudar\": {\"fraudar\": 0.5, \"rsd\": 1.96, \"rev2\": 0.00001,}, # rev2=0.026\n",
+    "    \"fraudar\": {\"fraudar\": 0.9, \"rsd\": 1.96, \"rev2\": 0.026,}, # rev2=0.026\n",
     "    \"rsd\": {\"fraudar\": 0.5, \"rsd\": 0.6, \"rev2\": 0.026,},\n",
-    "    \"rev2\": {\"fraudar\": 0.9, \"rsd\": 1.1, \"rev2\": 0.4,},\n",
+    "    \"rev2\": {\"fraudar\": 0.9, \"rsd\": 1.1, \"rev2\": 0.00001,},\n",
     "}\n",
     "\n",
     "\n",
@@ -480,7 +480,7 @@
     "df_met = df_met.mean(axis=1, level=0)\n",
     "# display(df_met)\n",
     "\n",
-    "dmet=\"amazon\"\n",
+    "dmet=\"alpha\"\n",
     "\n",
     "display(get_sockfarm_alg_data_met(df_met, data=dmet, met=\"f1\"))\n",
     "display(get_sockfarm_alg_data_met(df_met, data=dmet, met=\"recall\"))\n",
