--- a/src/eval_ilp.ipynb
+++ b/src/eval_ilp.ipynb
@@ -65,10 +65,9 @@
     "        df_res.loc[[u[:5]==\"usock\" for u in df_res.index.tolist()], \"truth\"] = 1\n",
     "        df_res.loc[[u[:6]==\"udummy\" for u in df_res.index.tolist()], \"truth\"] = 1\n",
     "        df = df_res[[sp, \"truth\"]].dropna()\n",
+    "        df[sp]\n",
     "        t = df[\"truth\"].sum() if K is None else K\n",
     "        t_frac = t / df.shape[0]\n",
-    "        # df[\"pred\"] = (df[sp].rank(ascending=False, method=\"min\") <= t) * 1\n",
-    "        # df[\"pred\"] = df[sp] >= t_frac\n",
     "        df[\"pred\"] = df[sp] >= th\n",
     "\n",
     "        ret[sp] = {\n",
@@ -81,27 +80,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "alg_list = [\"fraudar\", \"rsd\", \"rev2\"][:3]\n",
-    "data_list = [\"alpha\", \"otc\", \"amazon\", \"epinions\"][:3]\n",
+    "data_list = [\"alpha\", \"otc\", \"amazon\", \"epinions\"][3:]\n",
     "budget_list = [100.0, 200.0, 300.0, 400.0]\n",
     "frac_list = [0.0, 0.2, 0.4, 0.6, 0.8]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../res/ilp_attack/rev2-otc/100.0-0.6.pkl\n",
-      "../res/ilp_attack/rev2-otc/100.0-0.8.pkl\n"
+      "../res/ilp_attack/rsd-epinions/200.0-0.6.pkl\n",
+      "../res/ilp_attack/rsd-epinions/300.0-0.0.pkl\n",
+      "../res/ilp_attack/rsd-epinions/300.0-0.2.pkl\n",
+      "../res/ilp_attack/rsd-epinions/300.0-0.4.pkl\n",
+      "../res/ilp_attack/rsd-epinions/300.0-0.6.pkl\n",
+      "../res/ilp_attack/rsd-epinions/400.0-0.0.pkl\n"
      ]
     }
    ],
@@ -119,12 +122,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# attack_res[(\"alpha\", \"fraudar\", 400.0, 0.0)].to_csv(\"ar.csv\")"
+    "# attack_res[(\"epinions\", \"fraudar\", 400.0, 0.2)].to_csv(\"ar.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -160,116 +163,114 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">alpha</th>\n",
+       "      <th rowspan=\"11\" valign=\"top\">epinions</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">fraudar</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">100.0</th>\n",
        "      <th rowspan=\"3\" valign=\"top\">0.0</th>\n",
        "      <th>precision</th>\n",
-       "      <td>0.357513</td>\n",
-       "      <td>0.370968</td>\n",
-       "      <td>0.380682</td>\n",
-       "      <td>0.364198</td>\n",
+       "      <td>0.016245</td>\n",
+       "      <td>0.018277</td>\n",
+       "      <td>0.021121</td>\n",
+       "      <td>0.022312</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>recall</th>\n",
-       "      <td>0.907895</td>\n",
-       "      <td>0.851852</td>\n",
-       "      <td>0.893333</td>\n",
-       "      <td>0.855072</td>\n",
+       "      <td>0.168558</td>\n",
+       "      <td>0.168385</td>\n",
+       "      <td>0.202952</td>\n",
+       "      <td>0.235043</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f1</th>\n",
-       "      <td>0.513011</td>\n",
-       "      <td>0.516854</td>\n",
-       "      <td>0.533865</td>\n",
-       "      <td>0.510823</td>\n",
+       "      <td>0.029634</td>\n",
+       "      <td>0.032974</td>\n",
+       "      <td>0.038261</td>\n",
+       "      <td>0.040756</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">0.2</th>\n",
        "      <th>precision</th>\n",
-       "      <td>0.350785</td>\n",
-       "      <td>0.370968</td>\n",
-       "      <td>0.380682</td>\n",
-       "      <td>0.335526</td>\n",
+       "      <td>0.016245</td>\n",
+       "      <td>0.018304</td>\n",
+       "      <td>0.021121</td>\n",
+       "      <td>0.022312</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>recall</th>\n",
-       "      <td>0.761364</td>\n",
-       "      <td>0.741935</td>\n",
-       "      <td>0.770115</td>\n",
-       "      <td>0.629630</td>\n",
+       "      <td>0.165342</td>\n",
+       "      <td>0.161716</td>\n",
+       "      <td>0.194346</td>\n",
+       "      <td>0.223577</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <th>...</th>\n",
        "      <th>...</th>\n",
        "      <th>...</th>\n",
-       "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">amazon</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">rev2</th>\n",
-       "      <th rowspan=\"5\" valign=\"top\">500.0</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">400.0</th>\n",
        "      <th rowspan=\"2\" valign=\"top\">0.6</th>\n",
        "      <th>recall</th>\n",
-       "      <td>0.142857</td>\n",
-       "      <td>0.207120</td>\n",
-       "      <td>0.275862</td>\n",
-       "      <td>0.329356</td>\n",
+       "      <td>0.124836</td>\n",
+       "      <td>0.073563</td>\n",
+       "      <td>0.065060</td>\n",
+       "      <td>0.076720</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f1</th>\n",
-       "      <td>0.227692</td>\n",
-       "      <td>0.293578</td>\n",
-       "      <td>0.334944</td>\n",
-       "      <td>0.366048</td>\n",
+       "      <td>0.155229</td>\n",
+       "      <td>0.115942</td>\n",
+       "      <td>0.100935</td>\n",
+       "      <td>0.112840</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"3\" valign=\"top\">0.8</th>\n",
        "      <th>precision</th>\n",
-       "      <td>0.560606</td>\n",
-       "      <td>0.503937</td>\n",
-       "      <td>0.426230</td>\n",
-       "      <td>0.411940</td>\n",
+       "      <td>0.205184</td>\n",
+       "      <td>0.273504</td>\n",
+       "      <td>0.225000</td>\n",
+       "      <td>0.213235</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>recall</th>\n",
-       "      <td>0.115987</td>\n",
-       "      <td>0.173442</td>\n",
-       "      <td>0.237986</td>\n",
-       "      <td>0.288100</td>\n",
+       "      <td>0.117429</td>\n",
+       "      <td>0.066253</td>\n",
+       "      <td>0.058315</td>\n",
+       "      <td>0.068075</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f1</th>\n",
-       "      <td>0.192208</td>\n",
-       "      <td>0.258065</td>\n",
-       "      <td>0.305433</td>\n",
-       "      <td>0.339066</td>\n",
+       "      <td>0.149371</td>\n",
+       "      <td>0.106667</td>\n",
+       "      <td>0.092624</td>\n",
+       "      <td>0.103203</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>669 rows × 4 columns</p>\n",
+       "<p>162 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                           0         1         2         3\n",
-       "alpha  fraudar 100.0 0.0 precision  0.357513  0.370968  0.380682  0.364198\n",
-       "                         recall     0.907895  0.851852  0.893333  0.855072\n",
-       "                         f1         0.513011  0.516854  0.533865  0.510823\n",
-       "                     0.2 precision  0.350785  0.370968  0.380682  0.335526\n",
-       "                         recall     0.761364  0.741935  0.770115  0.629630\n",
-       "...                                      ...       ...       ...       ...\n",
-       "amazon rev2    500.0 0.6 recall     0.142857  0.207120  0.275862  0.329356\n",
-       "                         f1         0.227692  0.293578  0.334944  0.366048\n",
-       "                     0.8 precision  0.560606  0.503937  0.426230  0.411940\n",
-       "                         recall     0.115987  0.173442  0.237986  0.288100\n",
-       "                         f1         0.192208  0.258065  0.305433  0.339066\n",
+       "                                             0         1         2         3\n",
+       "epinions fraudar 100.0 0.0 precision  0.016245  0.018277  0.021121  0.022312\n",
+       "                           recall     0.168558  0.168385  0.202952  0.235043\n",
+       "                           f1         0.029634  0.032974  0.038261  0.040756\n",
+       "                       0.2 precision  0.016245  0.018304  0.021121  0.022312\n",
+       "                           recall     0.165342  0.161716  0.194346  0.223577\n",
+       "...                                        ...       ...       ...       ...\n",
+       "         rev2    400.0 0.6 recall     0.124836  0.073563  0.065060  0.076720\n",
+       "                           f1         0.155229  0.115942  0.100935  0.112840\n",
+       "                       0.8 precision  0.205184  0.273504  0.225000  0.213235\n",
+       "                           recall     0.117429  0.066253  0.058315  0.068075\n",
+       "                           f1         0.149371  0.106667  0.092624  0.103203\n",
        "\n",
-       "[669 rows x 4 columns]"
+       "[162 rows x 4 columns]"
       ]
      },
      "metadata": {},
@@ -292,31 +293,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pd.concat([df_met.loc[(\"alpha\", \"rev2\", slice(None), slice(None))], df_met.loc[(\"alpha\", \"fraudar\", slice(None), slice(None))].mean(axis=1)], axis=1)\n",
-    "# df_met.index = df_met.index.set_names([\"data\", \"algo\", \"budget\", \"frac\", \"metrics\"])\n",
-    "# df_met.mean(axis=1).to_frame().reset_index().pivot(index=[\"data\", \"algo\", \"frac\", \"metrics\"], columns=[\"budget\"]).loc[(\"alpha\", \"rev2\", slice(None), \"f1\")].droplevel(0, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_alg_data_met(df_met, alg=\"rev2\", data=\"alpha\", met=\"f1\"):\n",
     "    df_met.index = df_met.index.set_names([\"data\", \"algo\", \"budget\", \"frac\", \"metrics\"])\n",
-    "    rdf = df_met.mean(axis=1).to_frame().reset_index().pivot(index=[\"data\", \"algo\", \"frac\", \"metrics\"], columns=[\"budget\"]).loc[(data, alg, slice(None), met)].droplevel(0, axis=1).droplevel([0, 1, 3], axis=0)\n",
-    "    rdf.index = [f\"baseline-{i}\" for i in rdf.index]\n",
+    "    rdf = df_met.mean(axis=1).to_frame().reset_index().pivot(index=[\"data\", \"algo\", \"frac\", \"metrics\"], columns=[\"budget\"]).loc[(data, alg, slice(None), met)].droplevel(0, axis=1)#.droplevel([0, 1, 3], axis=0)\n",
+    "    rdf.index = [f\"baseline-{i}\" if i > 0 else \"no-attack\" for i in rdf.index]\n",
     "    return rdf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -344,70 +334,64 @@
        "      <th>200.0</th>\n",
        "      <th>300.0</th>\n",
        "      <th>400.0</th>\n",
-       "      <th>500.0</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>baseline-0.0</th>\n",
-       "      <td>0.490046</td>\n",
-       "      <td>0.490709</td>\n",
-       "      <td>0.490709</td>\n",
-       "      <td>0.490709</td>\n",
-       "      <td>0.490709</td>\n",
+       "      <th>no-attack</th>\n",
+       "      <td>0.320685</td>\n",
+       "      <td>0.322658</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.2</th>\n",
-       "      <td>0.462302</td>\n",
-       "      <td>0.450966</td>\n",
-       "      <td>0.433928</td>\n",
-       "      <td>0.418390</td>\n",
-       "      <td>0.404135</td>\n",
+       "      <td>0.317282</td>\n",
+       "      <td>0.315419</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.309493</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.4</th>\n",
-       "      <td>0.445131</td>\n",
-       "      <td>0.416957</td>\n",
-       "      <td>0.390990</td>\n",
-       "      <td>0.367492</td>\n",
-       "      <td>0.347033</td>\n",
+       "      <td>0.312042</td>\n",
+       "      <td>0.306787</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.294007</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.6</th>\n",
-       "      <td>0.426932</td>\n",
-       "      <td>0.388291</td>\n",
-       "      <td>0.355790</td>\n",
-       "      <td>0.329003</td>\n",
-       "      <td>0.305565</td>\n",
+       "      <td>0.306785</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.279000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.8</th>\n",
-       "      <td>0.410979</td>\n",
-       "      <td>0.364386</td>\n",
-       "      <td>0.326683</td>\n",
-       "      <td>0.298552</td>\n",
-       "      <td>0.273693</td>\n",
+       "      <td>0.305899</td>\n",
+       "      <td>0.292035</td>\n",
+       "      <td>0.28042</td>\n",
+       "      <td>0.268877</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "budget           100.0     200.0     300.0     400.0     500.0\n",
-       "baseline-0.0  0.490046  0.490709  0.490709  0.490709  0.490709\n",
-       "baseline-0.2  0.462302  0.450966  0.433928  0.418390  0.404135\n",
-       "baseline-0.4  0.445131  0.416957  0.390990  0.367492  0.347033\n",
-       "baseline-0.6  0.426932  0.388291  0.355790  0.329003  0.305565\n",
-       "baseline-0.8  0.410979  0.364386  0.326683  0.298552  0.273693"
+       "budget           100.0     200.0    300.0     400.0\n",
+       "no-attack     0.320685  0.322658      NaN       NaN\n",
+       "baseline-0.2  0.317282  0.315419      NaN  0.309493\n",
+       "baseline-0.4  0.312042  0.306787      NaN  0.294007\n",
+       "baseline-0.6  0.306785       NaN      NaN  0.279000\n",
+       "baseline-0.8  0.305899  0.292035  0.28042  0.268877"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_alg_data_met(df_met, alg=\"rev2\", data=\"amazon\", met=\"f1\")"
+    "get_alg_data_met(df_met, alg=\"rsd\", data=\"epinions\", met=\"f1\")"
    ]
   }
  ],
