--- a/src/eval_ilp.ipynb
+++ b/src/eval_ilp.ipynb
@@ -23,7 +23,11 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "import sklearn.metrics"
+    "import sklearn.metrics\n",
+    "\n",
+    "import warnings\n",
+    "from sklearn.exceptions import UndefinedMetricWarning\n",
+    "warnings.filterwarnings(action='ignore', category=UndefinedMetricWarning)"
    ]
   },
   {
@@ -85,29 +89,16 @@
    "outputs": [],
    "source": [
     "alg_list = [\"fraudar\", \"rsd\", \"rev2\"][:3]\n",
-    "data_list = [\"alpha\", \"otc\", \"amazon\", \"epinions\"][3:]\n",
+    "data_list = [\"alpha\", \"otc\", \"amazon\", \"epinions\"][1:2]\n",
     "budget_list = [100.0, 200.0, 300.0, 400.0]\n",
     "frac_list = [0.0, 0.2, 0.4, 0.6, 0.8]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../res/ilp_attack/rsd-epinions/200.0-0.6.pkl\n",
-      "../res/ilp_attack/rsd-epinions/300.0-0.0.pkl\n",
-      "../res/ilp_attack/rsd-epinions/300.0-0.2.pkl\n",
-      "../res/ilp_attack/rsd-epinions/300.0-0.4.pkl\n",
-      "../res/ilp_attack/rsd-epinions/300.0-0.6.pkl\n",
-      "../res/ilp_attack/rsd-epinions/400.0-0.0.pkl\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "attack_res = {\n",
     "    (d, a, b, f): get_results(data_name=d, alg=a, attack_name=\"ilp_attack\", budget=b, frac=f)\n",
@@ -127,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -163,44 +154,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"11\" valign=\"top\">epinions</th>\n",
+       "      <th rowspan=\"11\" valign=\"top\">otc</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">fraudar</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">100.0</th>\n",
        "      <th rowspan=\"3\" valign=\"top\">0.0</th>\n",
        "      <th>precision</th>\n",
-       "      <td>0.016245</td>\n",
-       "      <td>0.018277</td>\n",
-       "      <td>0.021121</td>\n",
-       "      <td>0.022312</td>\n",
+       "      <td>0.437500</td>\n",
+       "      <td>0.468599</td>\n",
+       "      <td>0.514124</td>\n",
+       "      <td>0.506329</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>recall</th>\n",
-       "      <td>0.168558</td>\n",
-       "      <td>0.168385</td>\n",
-       "      <td>0.202952</td>\n",
-       "      <td>0.235043</td>\n",
+       "      <td>0.791304</td>\n",
+       "      <td>0.866071</td>\n",
+       "      <td>0.866667</td>\n",
+       "      <td>0.800000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f1</th>\n",
-       "      <td>0.029634</td>\n",
-       "      <td>0.032974</td>\n",
-       "      <td>0.038261</td>\n",
-       "      <td>0.040756</td>\n",
+       "      <td>0.563467</td>\n",
+       "      <td>0.608150</td>\n",
+       "      <td>0.645390</td>\n",
+       "      <td>0.620155</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">0.2</th>\n",
        "      <th>precision</th>\n",
-       "      <td>0.016245</td>\n",
-       "      <td>0.018304</td>\n",
-       "      <td>0.021121</td>\n",
-       "      <td>0.022312</td>\n",
+       "      <td>0.457014</td>\n",
+       "      <td>0.468599</td>\n",
+       "      <td>0.514124</td>\n",
+       "      <td>0.506329</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>recall</th>\n",
-       "      <td>0.165342</td>\n",
-       "      <td>0.161716</td>\n",
-       "      <td>0.194346</td>\n",
-       "      <td>0.223577</td>\n",
+       "      <td>0.795276</td>\n",
+       "      <td>0.782258</td>\n",
+       "      <td>0.777778</td>\n",
+       "      <td>0.714286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -217,60 +208,60 @@
        "      <th rowspan=\"5\" valign=\"top\">400.0</th>\n",
        "      <th rowspan=\"2\" valign=\"top\">0.6</th>\n",
        "      <th>recall</th>\n",
-       "      <td>0.124836</td>\n",
-       "      <td>0.073563</td>\n",
-       "      <td>0.065060</td>\n",
-       "      <td>0.076720</td>\n",
+       "      <td>0.154440</td>\n",
+       "      <td>0.156250</td>\n",
+       "      <td>0.160643</td>\n",
+       "      <td>0.163934</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f1</th>\n",
-       "      <td>0.155229</td>\n",
-       "      <td>0.115942</td>\n",
-       "      <td>0.100935</td>\n",
-       "      <td>0.112840</td>\n",
+       "      <td>0.248447</td>\n",
+       "      <td>0.250784</td>\n",
+       "      <td>0.258065</td>\n",
+       "      <td>0.262295</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"3\" valign=\"top\">0.8</th>\n",
        "      <th>precision</th>\n",
-       "      <td>0.205184</td>\n",
-       "      <td>0.273504</td>\n",
-       "      <td>0.225000</td>\n",
-       "      <td>0.213235</td>\n",
+       "      <td>0.634921</td>\n",
+       "      <td>0.634921</td>\n",
+       "      <td>0.655738</td>\n",
+       "      <td>0.655738</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>recall</th>\n",
-       "      <td>0.117429</td>\n",
-       "      <td>0.066253</td>\n",
-       "      <td>0.058315</td>\n",
-       "      <td>0.068075</td>\n",
+       "      <td>0.130293</td>\n",
+       "      <td>0.131579</td>\n",
+       "      <td>0.134680</td>\n",
+       "      <td>0.136986</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f1</th>\n",
-       "      <td>0.149371</td>\n",
-       "      <td>0.106667</td>\n",
-       "      <td>0.092624</td>\n",
-       "      <td>0.103203</td>\n",
+       "      <td>0.216216</td>\n",
+       "      <td>0.217984</td>\n",
+       "      <td>0.223464</td>\n",
+       "      <td>0.226629</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>162 rows × 4 columns</p>\n",
+       "<p>180 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             0         1         2         3\n",
-       "epinions fraudar 100.0 0.0 precision  0.016245  0.018277  0.021121  0.022312\n",
-       "                           recall     0.168558  0.168385  0.202952  0.235043\n",
-       "                           f1         0.029634  0.032974  0.038261  0.040756\n",
-       "                       0.2 precision  0.016245  0.018304  0.021121  0.022312\n",
-       "                           recall     0.165342  0.161716  0.194346  0.223577\n",
-       "...                                        ...       ...       ...       ...\n",
-       "         rev2    400.0 0.6 recall     0.124836  0.073563  0.065060  0.076720\n",
-       "                           f1         0.155229  0.115942  0.100935  0.112840\n",
-       "                       0.8 precision  0.205184  0.273504  0.225000  0.213235\n",
-       "                           recall     0.117429  0.066253  0.058315  0.068075\n",
-       "                           f1         0.149371  0.106667  0.092624  0.103203\n",
+       "                                        0         1         2         3\n",
+       "otc fraudar 100.0 0.0 precision  0.437500  0.468599  0.514124  0.506329\n",
+       "                      recall     0.791304  0.866071  0.866667  0.800000\n",
+       "                      f1         0.563467  0.608150  0.645390  0.620155\n",
+       "                  0.2 precision  0.457014  0.468599  0.514124  0.506329\n",
+       "                      recall     0.795276  0.782258  0.777778  0.714286\n",
+       "...                                   ...       ...       ...       ...\n",
+       "    rev2    400.0 0.6 recall     0.154440  0.156250  0.160643  0.163934\n",
+       "                      f1         0.248447  0.250784  0.258065  0.262295\n",
+       "                  0.8 precision  0.634921  0.634921  0.655738  0.655738\n",
+       "                      recall     0.130293  0.131579  0.134680  0.136986\n",
+       "                      f1         0.216216  0.217984  0.223464  0.226629\n",
        "\n",
-       "[162 rows x 4 columns]"
+       "[180 rows x 4 columns]"
       ]
      },
      "metadata": {},
@@ -293,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -339,59 +330,59 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>no-attack</th>\n",
-       "      <td>0.320685</td>\n",
-       "      <td>0.322658</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.636475</td>\n",
+       "      <td>0.645329</td>\n",
+       "      <td>0.645329</td>\n",
+       "      <td>0.645329</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.2</th>\n",
-       "      <td>0.317282</td>\n",
-       "      <td>0.315419</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.309493</td>\n",
+       "      <td>0.634904</td>\n",
+       "      <td>0.642385</td>\n",
+       "      <td>0.645329</td>\n",
+       "      <td>0.645329</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.4</th>\n",
-       "      <td>0.312042</td>\n",
-       "      <td>0.306787</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.294007</td>\n",
+       "      <td>0.636513</td>\n",
+       "      <td>0.640902</td>\n",
+       "      <td>0.645329</td>\n",
+       "      <td>0.645329</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.6</th>\n",
-       "      <td>0.306785</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.279000</td>\n",
+       "      <td>0.639516</td>\n",
+       "      <td>0.638033</td>\n",
+       "      <td>0.645329</td>\n",
+       "      <td>0.645329</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.8</th>\n",
-       "      <td>0.305899</td>\n",
-       "      <td>0.292035</td>\n",
-       "      <td>0.28042</td>\n",
-       "      <td>0.268877</td>\n",
+       "      <td>0.639468</td>\n",
+       "      <td>0.634979</td>\n",
+       "      <td>0.639516</td>\n",
+       "      <td>0.645329</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "budget           100.0     200.0    300.0     400.0\n",
-       "no-attack     0.320685  0.322658      NaN       NaN\n",
-       "baseline-0.2  0.317282  0.315419      NaN  0.309493\n",
-       "baseline-0.4  0.312042  0.306787      NaN  0.294007\n",
-       "baseline-0.6  0.306785       NaN      NaN  0.279000\n",
-       "baseline-0.8  0.305899  0.292035  0.28042  0.268877"
+       "budget           100.0     200.0     300.0     400.0\n",
+       "no-attack     0.636475  0.645329  0.645329  0.645329\n",
+       "baseline-0.2  0.634904  0.642385  0.645329  0.645329\n",
+       "baseline-0.4  0.636513  0.640902  0.645329  0.645329\n",
+       "baseline-0.6  0.639516  0.638033  0.645329  0.645329\n",
+       "baseline-0.8  0.639468  0.634979  0.639516  0.645329"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_alg_data_met(df_met, alg=\"rsd\", data=\"epinions\", met=\"f1\")"
+    "get_alg_data_met(df_met, alg=\"rev2\", data=\"otc\", met=\"precision\")"
    ]
   }
  ],
